# x-code-rs

./: Cargo.toml
continent-code/: Cargo.toml
continent-code/src/: lib.rs
country-code/: Cargo.toml  README.md
country-code/src/: lib.rs
country-code/src/iso3166_1/: alpha_2.rs  alpha_3.rs
country-code/src/iso3166_2/: cn.rs  mod.rs  us.rs
country-code/tests/ISO_3166-1_alpha-2/: README.md
country-code/tests/ISO_3166-1_alpha-3/: README.md
currency-code/: Cargo.toml
currency-code/src/: iso4217.rs  lib.rs
language-code/: Cargo.toml
language-code/src/: lib.rs
