[package]
name = "country-code"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Country Code"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/x-code-rs"
homepage = "https://github.com/bk-rs/x-code-rs"
documentation = "https://docs.rs/country-code"
keywords = []
categories = []
readme = "README.md"

[dependencies]
